# ecdb

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
protos/: component_schema.proto  entity.proto
src/: entity.rs  main.rs  schema.rs
src/protos/: mod.rs
