[package]
name = "ecdb"
version = "0.0.2"
authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = "Entity component database."
repository = "https://github.com/nwmqpa/ecdb"
include = [
    "**/*.proto",
    "**/*.rs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with-serde = []

[dependencies]
protobuf = { version = "2.8.1", features = ["with-serde"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"

[build-dependencies]
protobuf-codegen-pure = "2.3"