// Copyright 2019 Thomas Nicollet
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

[package]
name = "ecdb"
version = "0.0.2"
authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = "Entity component database."
repository = "https://github.com/nwmqpa/ecdb"
include = [
    "**/*.proto",
    "**/*.rs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with-serde = []

[dependencies]
protobuf = { version = "2.8.1", features = ["with-serde"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"

[build-dependencies]
protobuf-codegen-pure = "2.3"